--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "karaoke-roulette",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://matthewkesler.com/karaoke-roulette",
   "devDependencies": {
     "react-scripts": "0.8.4"
   },
   "dependencies": {
     "firebase": "^3.6.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
